--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet"/>
-    <title>Vite App</title>
+    <title>Luan Nascimento | Portifolio</title>
   </head>
   <body>
     <div id="root"></div>
